[project]
name = "phcco-bioinfo"
version = "0.0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
    "scanpy[leiden] (>=1.11.1,<2.0.0)",
    "fastcluster (>=1.3.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "squidpy (>=1.6.5,<2.0.0)",
    "liana[common] (>=1.5.1,<2.0.0)",
    "cell2cell (>=0.7.4,<0.8.0)",
    "decoupler (>=2.0.2,<3.0.0)",
    "muon (>=0.1.7,<0.2.0)",
]

[tool.uv]
package = false

[tool.poetry]
package-mode = false
